--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,17 @@
-docker-build:
+build-docker:
+  image: docker:stable
+  stage: build
+  before_script:
+    - apk add git openssh make bash
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker info
+  script:
+    - make build
+  only:
+    - staging-1.3
+    - ci
+
+build-singularity:
   image: docker:stable
   stage: build
   before_script:
