--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+stages:
+  - build
+  - singularity
+
 build-docker:
   image: docker:stable
   stage: build
@@ -13,7 +17,7 @@ build-docker:
 
 build-singularity:
   image: docker:stable
-  stage: build
+  stage: singularity
   before_script:
     - apk add git openssh make bash
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
