--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dda-interface-app"]
 	path = dda-interface-app
-	url = git@github.com:volodymyrss/dda-interface-app.git
+	url = git@gitlab.astro.unige.ch:cdci/integral/dda-app.git
