--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ build-docker:
     - apk add git openssh make bash
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker info
-    -_git submodule update --init
-    - (cd dda-interface-app/)
+    - git submodule update --init
+      #    - (cd dda-interface-app/)
   script:
     - make build
   only:
