--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build-docker:
       #    - (cd dda-interface-app/)
   script:
     - make build
+    - make push
   only:
     - staging-1.3
     - ci
