--- a/worker-knowledge-osa11.0.yaml
+++ b/worker-knowledge-osa11.0.yaml
@@ -1,8 +1,12 @@
 - any-of:
+  - key: ['object_identity', 'factory_name']
+    value: 'ReportScWList'
   - key: ['object_identity', 'modules']
     value: ['git', 'ddosa11/staging-1-3', 'None']
   - key: ['object_identity', 'modules']
     value: ['git', 'ddosa11', 'git://ddosa11/staging-1-3']
-- none-of:
-  - key: ['object_identity', 'factory_name']
-    value: 'ISGRISpectraSum'
+  - key: ['object_identity', 'modules']
+    value: ['git', 'ddosa11', 'git://ddosa11/icversion']
+  - key: ['object_identity', 'modules']
+    value: ['git', 'ddosa11/icversion', 'None']
+
